style.css
/* ... */
.format-link .cm-entry-summary a:hover {
	background-color: #33363b;
}

/* Post Format: Aside.
--------------------------------------------- */
.format-aside .cm-entry-header {
	display: none;
}

/* Sidebar.
--------------------------------------------- */
@media screen and (min-width: 48em) {
	.left-sidebar .cm-content .cm-row {
		flex-direction: row-reverse;
	}
	.left-sidebar .cm-content .cm-primary {
		padding-right: 0;
		padding-left: 30px;
	}
}

.cm-narrow-container .cm-secondary {
	display: none;
}

.cm-narrow-container .cm-primary {
	margin: 0 auto;
	width: 100%;
	padding-right: 0;
}

.cm-narrow-container .cm-content .cm-container {
	max-width: 768px;
}

.cm-right-sidebar .cm-content .cm-primary {
	padding-right: 1.875em;
}

.cm-full-width-container .cm-content .cm-container {
	max-width: 100%;
	padding: 0;
}

.cm-full-width-container .cm-content .cm-container .cm-primary {
	width: 100%;
	padding-right: 0;
}

.cm-normal-container .cm-primary {
	padding: 0;
}

.cm-normal-container.cm-no-sidebar .cm-primary {
	width: 100%;
}

.cm-no-sidebar .cm-secondary {
	display: none;
}

.cm-primary .cm-entry-summary .cm-block-alignfull {
	margin-left: calc(50% - 50vw);
	margin-right: calc(51% - 50.2vw);
	max-width: unset;
	padding: 0 24px;
}

.cm-started-content .cm-primary .cm-entry-summary .cm-block-alignfull {
	margin-left: calc(50% - 50vw);
	margin-right: calc(51% - 50.2vw);
	max-width: unset;
	padding: 0 24px;
}

@media screen and (max-width: 768px) {
	.cm-started-content .cm-remove-padding {
		padding: 0 !important;
		border: 0 !important;
	}
}

@media screen and (min-width: 768px) {
	.cm-started-content .cm-sticky {
		height: 100vh;
		/* Ensure it fits within the viewport */
		position: sticky;
		top: 20px;
		/* Distance from the top when scrolling */
	}
}

.cm-normal-container {
	overflow: hidden;
}

.cm-normal-container .cm-primary .cm-entry-summary > .alignfull {
	margin-left: calc(50% - 50vw);
	margin-right: calc(50% - 50vw);
	max-width: unset;
}

.cm-normal-container .cm-primary .cm-entry-summary > .alignfull.wp-block-cover, .cm-normal-container .cm-primary .cm-entry-summary > .alignfull.wp-block-cover-image {
	width: unset;
}

.cm-normal-container .cm-primary .cm-entry-summary > .alignwide {
	margin-left: -100px;
	margin-right: -100px;
	max-width: unset;
}

.cm-normal-container.box-layout .cm-content {
	overflow: hidden;
}

.cm-normal-container.box-layout .cm-primary .cm-entry-summary > .alignfull {
	margin-left: -30px;
	margin-right: -30px;
}

.cm-normal-container.box-layout .cm-primary .cm-entry-summary > .alignfull.wp-block-cover, .cm-normal-container.box-layout .cm-primary .cm-entry-summary > .alignfull.wp-block-cover-image {
	width: unset;
}

.cm-normal-container.box-layout .cm-primary .cm-entry-summary > .alignwide {
	margin-left: -30px;
	margin-right: -30px;
	max-width: unset;
}

@media screen and (max-width: 1200px) {
	.no-sidebar-full-width .cm-primary .cm-entry-summary > .alignwide {
		margin-left: -20px;
		margin-right: -20px;
	}
	.cm-narrow-container .cm-primary .cm-entry-summary > .alignwide {
		margin-left: -50px;
		margin-right: -50px;
	}
	.cm-narrow-container .cm-primary .cm-entry-summary > .alignfull {
		margin-left: -100px;
		margin-right: -100px;
	}
}

@media screen and (max-width: 768px) {
	.cm-primary,
	.cm-secondary {
		width: 100%;
	}
	.no-sidebar-full-width .cm-primary .cm-entry-summary > .alignwide,
	.no-sidebar .cm-primary .cm-entry-summary > .alignwide {
		margin-left: -15px;
		margin-right: -15px;
	}
	.no-sidebar-full-width.box-layout .cm-primary .cm-entry-summary > .alignwide,
	.no-sidebar.box-layout .cm-primary .cm-entry-summary > .alignwide {
		margin-left: -15px;
		margin-right: -15px;
	}
	.no-sidebar-full-width.box-layout .cm-primary .cm-entry-summary > .alignfull,
	.no-sidebar.box-layout .cm-primary .cm-entry-summary > .alignfull {
		margin-left: -30px;
		margin-right: -30px;
	}
	.no-sidebar .cm-primary .cm-entry-summary > .alignfull {
		margin-left: -15px;
		margin-right: -15px;
	}
}

/* Pages.
--------------------------------------------- */
/* 404 Page.
--------------------------------------------- */
.cm-error-404 {
	text-align: center;
}

.cm-error-404 .cm-page-title {
	color: var(--cm-color-1, #207daf);
	font-size: 300px;
	font-weight: 700;
	line-height: 300px;
}

.cm-error-404 .cm-page-header {
	margin-bottom: 24px;
}

.cm-error-404 .cm-page-header .cm-page-title {
	font-size: 150px;
	line-height: 135px;
	border-bottom: 0;
}

.cm-error-404 .cm-page-header p {
	font-size: 22px;
	line-height: 1.3;
	margin-bottom: 8px;
}

.cm-error-404 .cm-page-header .cm-page-title,
.cm-error-404 .cm-page-header p {
	color: #52525B;
	font-weight: 600;
}

.cm-error-404 .cm-page-content {
	display: flex;
	justify-content: center;
	margin-bottom: 40px;
}

.cm-error-404 .cm-page-content p {
	width: 100%;
	margin-bottom: 0;
	color: #52525B;
}

.cm-error-404 .cm-btn {
	display: inline-block;
	padding: 12px 24px;
	background-color: var(--cm-color-1, #207daf);
	color: #fff;
	font-weight: 600;
	border: 1px solid var(--cm-color-1, #207daf);
	border-radius: 2px;
}

.cm-error-404 .cm-btn:hover {
	background-color: #33363b;
	border-color: #33363b;
}

@media screen and (min-width: 48em) {
	.cm-error-404 .cm-page-header {
		margin-bottom: 24px;
	}
	.cm-error-404 .cm-page-header .cm-page-title {
		font-size: 240px;
		line-height: 215px;
	}
	.cm-error-404 .cm-page-content p {
		width: 570px;
	}
}

/* No result page.
--------------------------------------------- */
.cm-no-results {
	padding-top: 30px;
	padding-bottom: 40px;
	text-align: center;
}

.cm-no-results img {
	margin-bottom: 32px;
}

.cm-no-results .cm-page-title {
	color: #52525B;
	font-size: 2rem;
	font-weight: 600;
	line-height: 1.3;
	border-bottom: 0;
}

.cm-no-results .cm-page-header {
	margin-bottom: 12px;
}

.cm-no-results .cm-page-content {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: 40px;
}
/* ... */

